--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<p>Agenda LTDA</p>
+
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Sistema de Agenda de Compromisso S/A</a>
@@ -11,7 +11,7 @@
           <a class="nav-link" aria-current="page" [routerLink]="['/home']">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" [routerLink]="['/products']">Agendamento</a>
+          <a class="nav-link" aria-current="page" [routerLink]="['/agendas']">Agendamento</a>
         </li>
       </ul>
     </div>
